[gd_scene load_steps=32 format=3 uid="uid://cjae7tcahph3m"]

[ext_resource type="Script" uid="uid://dlde878hu68p8" path="res://Scripts/MiscellaneousScripts/stage_control.gd" id="1_6bfml"]
[ext_resource type="PackedScene" uid="uid://clnw6lm0wf2im" path="res://Scenes/Miscellaneous/Pause/pause_menus.tscn" id="1_040rt"]
[ext_resource type="PackedScene" uid="uid://bvm2exo6iry4y" path="res://Scenes/Jack/jack.tscn" id="2_pgbp1"]
[ext_resource type="PackedScene" uid="uid://dcnqucotuj41y" path="res://Scenes/Miscellaneous/stats_control.tscn" id="3_0g4ye"]
[ext_resource type="Texture2D" uid="uid://dqbsfnfcvlfii" path="res://Assets/LevelDesign/Caves/7.png" id="3_4qg1e"]
[ext_resource type="Shader" uid="uid://cuclp0xkvj2we" path="res://ShaderNResources/color_swap.gdshader" id="3_040rt"]
[ext_resource type="PackedScene" uid="uid://d3626hwegg74p" path="res://Scenes/World/Map1.tscn" id="3_iephn"]
[ext_resource type="Texture2D" uid="uid://v4dkknlnbf2t" path="res://Assets/LevelDesign/Caves/6.png" id="4_040rt"]
[ext_resource type="PackedScene" uid="uid://c6ww6h1cglxi" path="res://Scenes/World/Map2.tscn" id="4_rbm34"]
[ext_resource type="PackedScene" uid="uid://ck06uebud7qs" path="res://Scenes/World/Map3.tscn" id="5_ak5v8"]
[ext_resource type="Texture2D" uid="uid://cmktl7m62cyvh" path="res://Assets/LevelDesign/Caves/5.png" id="5_dhrl2"]
[ext_resource type="Texture2D" uid="uid://bphljgfkf30eo" path="res://Assets/LevelDesign/Caves/4.png" id="6_i0miu"]
[ext_resource type="Texture2D" uid="uid://drej2mpmvkquo" path="res://Assets/LevelDesign/Legacy Adventure Pack - CEMETERY/Assets/Background_2.png" id="6_rdbpf"]
[ext_resource type="Texture2D" uid="uid://calq3aortthhb" path="res://Assets/LevelDesign/Caves/3.png" id="7_6bfml"]
[ext_resource type="Texture2D" uid="uid://c4dbuo5jew0yf" path="res://Assets/LevelDesign/Legacy Adventure Pack - CEMETERY/Assets/Background_1.png" id="7_oho3u"]
[ext_resource type="Texture2D" uid="uid://dds7fkppgtmfq" path="res://Assets/LevelDesign/Caves/2.png" id="8_0g4ye"]
[ext_resource type="Texture2D" uid="uid://c7ul653gnxyg0" path="res://Assets/LevelDesign/Caves/1.png" id="9_soh27"]
[ext_resource type="PackedScene" uid="uid://bm0mbx3bn11ar" path="res://ShaderNResources/CameraController/CameraController.tscn" id="16_dhrl2"]
[ext_resource type="Script" uid="uid://01ycw0k84ivy" path="res://ShaderNResources/CameraController/CameraSO.gd" id="17_i0miu"]
[ext_resource type="PackedScene" uid="uid://c7d7u7y52kw66" path="res://Scenes/Enemy/Skelly/skelly.tscn" id="17_soh27"]
[ext_resource type="Script" uid="uid://bfadu481xf6gu" path="res://ShaderNResources/CameraController/CameraTrigger.gd" id="21_soh27"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dhrl2"]
shader = ExtResource("3_040rt")
shader_parameter/custom_color = Color(0.795711, 0.630421, 0.600382, 1)

[sub_resource type="Resource" id="Resource_733rx"]
script = ExtResource("17_i0miu")
smooth = 3.0
offsetX = 0.0
offsetY = 0.0
pov = Vector2(0.9, 0.9)
ClampX = Vector2(330, 1450)
ClampY = Vector2(-220, 150)
islock = false
lock_position = Vector2(0, 0)
metadata/_custom_type_script = "uid://01ycw0k84ivy"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kmsc6"]
size = Vector2(75, 366)

[sub_resource type="Resource" id="Resource_kmsc6"]
script = ExtResource("17_i0miu")
smooth = 3.0
offsetX = 0.0
offsetY = 0.0
pov = Vector2(0.9, 0.9)
ClampX = Vector2(330, 1400)
ClampY = Vector2(-200, 150)
islock = false
lock_position = Vector2(0, 0)
metadata/_custom_type_script = "uid://01ycw0k84ivy"

[sub_resource type="Resource" id="Resource_soh27"]
script = ExtResource("17_i0miu")
smooth = 3.0
offsetX = 0.0
offsetY = 0.0
pov = Vector2(0.9, 0.9)
ClampX = Vector2(300, 1350)
ClampY = Vector2(-200, 150)
islock = false
lock_position = Vector2(0, 0)
metadata/_custom_type_script = "uid://01ycw0k84ivy"

[sub_resource type="Resource" id="Resource_ajhoy"]
script = ExtResource("17_i0miu")
smooth = 3.0
offsetX = 0.0
offsetY = 0.0
pov = Vector2(0.9, 0.9)
ClampX = Vector2(3300, 4820)
ClampY = Vector2(2830, 3100)
islock = false
lock_position = Vector2(0, 0)
metadata/_custom_type_script = "uid://01ycw0k84ivy"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_soh27"]
size = Vector2(68, 337)

[sub_resource type="Resource" id="Resource_i0miu"]
script = ExtResource("17_i0miu")
smooth = 3.0
offsetX = 0.0
offsetY = 0.0
pov = Vector2(0.9, 0.9)
ClampX = Vector2(0, 0)
ClampY = Vector2(0, 0)
islock = false
lock_position = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6bfml"]
size = Vector2(98, 145)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0g4ye"]
size = Vector2(458, 20)

[node name="TestScene" type="Node2D"]
script = ExtResource("1_6bfml")
metadata/_edit_vertical_guides_ = [2937.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenus" parent="CanvasLayer" instance=ExtResource("1_040rt")]

[node name="StatsControl" parent="CanvasLayer" instance=ExtResource("3_0g4ye")]

[node name="BG1_2" type="ParallaxBackground" parent="."]
scroll_offset = Vector2(3000, 3000)

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG1_2"]
motion_scale = Vector2(0.1, 1)
motion_mirroring = Vector2(1240, 0)

[node name="Background2" type="Sprite2D" parent="BG1_2/ParallaxLayer"]
position = Vector2(555, -32)
scale = Vector2(2.5, 2.5)
texture = ExtResource("6_rdbpf")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BG1_2"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(1240, 0)

[node name="Background1" type="Sprite2D" parent="BG1_2/ParallaxLayer2"]
position = Vector2(555, -32)
scale = Vector2(2.5, 2.5)
texture = ExtResource("7_oho3u")

[node name="BG3_4" type="ParallaxBackground" parent="."]
visible = false
offset = Vector2(200, 70)
scale = Vector2(1, 1.15)
transform = Transform2D(1, 0, 0, 1.15, 200, 70)

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG3_4"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(1152, 0)

[node name="7" type="Sprite2D" parent="BG3_4/ParallaxLayer"]
material = SubResource("ShaderMaterial_dhrl2")
scale = Vector2(3, 3)
texture = ExtResource("3_4qg1e")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="BG3_4"]
motion_scale = Vector2(0.25, 1)
motion_mirroring = Vector2(1152, 0)

[node name="6" type="Sprite2D" parent="BG3_4/ParallaxLayer2"]
material = SubResource("ShaderMaterial_dhrl2")
scale = Vector2(3, 3)
texture = ExtResource("4_040rt")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="BG3_4"]
motion_scale = Vector2(0.35, 1)
motion_mirroring = Vector2(1152, 0)

[node name="5" type="Sprite2D" parent="BG3_4/ParallaxLayer3"]
material = SubResource("ShaderMaterial_dhrl2")
scale = Vector2(3, 3)
texture = ExtResource("5_dhrl2")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="BG3_4"]
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(1152, 0)

[node name="4" type="Sprite2D" parent="BG3_4/ParallaxLayer4"]
material = SubResource("ShaderMaterial_dhrl2")
scale = Vector2(3, 3)
texture = ExtResource("6_i0miu")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="BG3_4"]
motion_scale = Vector2(0.45, 1)
motion_mirroring = Vector2(1152, 0)

[node name="3" type="Sprite2D" parent="BG3_4/ParallaxLayer5"]
material = SubResource("ShaderMaterial_dhrl2")
scale = Vector2(3, 3)
texture = ExtResource("7_6bfml")

[node name="ParallaxLayer6" type="ParallaxLayer" parent="BG3_4"]
motion_scale = Vector2(0.55, 1)
motion_mirroring = Vector2(1152, 0)

[node name="2" type="Sprite2D" parent="BG3_4/ParallaxLayer6"]
material = SubResource("ShaderMaterial_dhrl2")
scale = Vector2(3, 3)
texture = ExtResource("8_0g4ye")

[node name="ParallaxLayer7" type="ParallaxLayer" parent="BG3_4"]
motion_scale = Vector2(0.65, 1)
motion_mirroring = Vector2(1152, 0)

[node name="1" type="Sprite2D" parent="BG3_4/ParallaxLayer7"]
material = SubResource("ShaderMaterial_dhrl2")
scale = Vector2(3, 3)
texture = ExtResource("9_soh27")

[node name="Map1" parent="." instance=ExtResource("3_iephn")]
position = Vector2(-7, 33)

[node name="Map1Spawn" type="Marker2D" parent="Map1"]
position = Vector2(409, 21)

[node name="Map1Triggers" type="Node2D" parent="Map1"]
position = Vector2(7, -33)

[node name="lvl1CamTrig2" type="Area2D" parent="Map1/Map1Triggers"]
position = Vector2(1376, -429)
collision_layer = 0
collision_mask = 2
script = ExtResource("21_soh27")
cam_so = SubResource("Resource_733rx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map1/Map1Triggers/lvl1CamTrig2"]
position = Vector2(40, 205)
shape = SubResource("RectangleShape2D_kmsc6")

[node name="lvl1CamTrig3" type="Area2D" parent="Map1/Map1Triggers"]
position = Vector2(1337, 33)
collision_layer = 0
collision_mask = 2
script = ExtResource("21_soh27")
cam_so = SubResource("Resource_kmsc6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map1/Map1Triggers/lvl1CamTrig3"]
position = Vector2(-126, -154)
shape = SubResource("RectangleShape2D_kmsc6")

[node name="lvl1CamTrig" type="Area2D" parent="Map1/Map1Triggers"]
position = Vector2(362, 31)
collision_layer = 0
collision_mask = 2
script = ExtResource("21_soh27")
cam_so = SubResource("Resource_soh27")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map1/Map1Triggers/lvl1CamTrig"]
position = Vector2(40, 166)
shape = SubResource("RectangleShape2D_kmsc6")

[node name="Map1Enemy" type="Node2D" parent="Map1"]

[node name="Skelly" parent="Map1/Map1Enemy" instance=ExtResource("17_soh27")]
position = Vector2(854, 203)
scale = Vector2(2, 2)
attackRadius = 70

[node name="Skelly2" parent="Map1/Map1Enemy" instance=ExtResource("17_soh27")]
position = Vector2(137, -135)
scale = Vector2(2, 2)
attackRadius = 70

[node name="Skelly3" parent="Map1/Map1Enemy" instance=ExtResource("17_soh27")]
position = Vector2(1181, 206)
scale = Vector2(2, 2)
attackRadius = 70

[node name="Skelly4" parent="Map1/Map1Enemy" instance=ExtResource("17_soh27")]
position = Vector2(1553, -256)
scale = Vector2(2, 2)
attackRadius = 70

[node name="Map2" parent="." instance=ExtResource("4_rbm34")]
position = Vector2(3000, 3000)

[node name="Map2Spawn" type="Marker2D" parent="Map2"]
position = Vector2(21, 206)

[node name="Map2Triggers" type="Node2D" parent="Map2"]

[node name="lvl2CamTrig" type="Area2D" parent="Map2/Map2Triggers"]
collision_layer = 0
collision_mask = 2
script = ExtResource("21_soh27")
cam_so = SubResource("Resource_ajhoy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Map2/Map2Triggers/lvl2CamTrig"]
position = Vector2(31, 88.5)
shape = SubResource("RectangleShape2D_soh27")

[node name="Map2Enemy" type="Node2D" parent="Map2"]

[node name="Skelly" parent="Map2/Map2Enemy" instance=ExtResource("17_soh27")]
position = Vector2(374, 204)
scale = Vector2(2, 2)

[node name="Skelly2" parent="Map2/Map2Enemy" instance=ExtResource("17_soh27")]
position = Vector2(1528, -202)
scale = Vector2(2, 2)
patrol_range = 169.0

[node name="Skelly3" parent="Map2/Map2Enemy" instance=ExtResource("17_soh27")]
position = Vector2(6, -263)
scale = Vector2(2, 2)

[node name="Skelly4" parent="Map2/Map2Enemy" instance=ExtResource("17_soh27")]
position = Vector2(1223, 196)
scale = Vector2(2, 2)

[node name="Skelly5" parent="Map2/Map2Enemy" instance=ExtResource("17_soh27")]
position = Vector2(1165, -205)
scale = Vector2(2, 2)
patrol_range = 169.0

[node name="Skelly6" parent="Map2/Map2Enemy" instance=ExtResource("17_soh27")]
position = Vector2(1776, -211)
scale = Vector2(2, 2)
patrol_range = 169.0

[node name="Skelly8" parent="Map2/Map2Enemy" instance=ExtResource("17_soh27")]
position = Vector2(1897, 158)
scale = Vector2(2, 2)

[node name="Map3" parent="." instance=ExtResource("5_ak5v8")]
position = Vector2(4256, -637)

[node name="Jack" parent="." instance=ExtResource("2_pgbp1")]
light_mask = 3
position = Vector2(3021, 3208)
collision_layer = 2
speed = 275.0

[node name="Camera2D" parent="." node_paths=PackedStringArray("player") instance=ExtResource("16_dhrl2")]
position = Vector2(3300, 3100)
player = NodePath("../Jack")
attribute = SubResource("Resource_i0miu")

[node name="TrasitNext" type="Area2D" parent="."]
position = Vector2(-787, 41)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrasitNext"]
position = Vector2(2495, 127)
shape = SubResource("RectangleShape2D_6bfml")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TrasitNext"]
position = Vector2(5547, 3349)
shape = SubResource("RectangleShape2D_0g4ye")

[connection signal="body_entered" from="Map1/Map1Triggers/lvl1CamTrig2" to="Map1/Map1Triggers/lvl1CamTrig2" method="_on_body_entered"]
[connection signal="body_entered" from="Map1/Map1Triggers/lvl1CamTrig3" to="Map1/Map1Triggers/lvl1CamTrig3" method="_on_body_entered"]
[connection signal="body_entered" from="Map1/Map1Triggers/lvl1CamTrig" to="Map1/Map1Triggers/lvl1CamTrig" method="_on_body_entered"]
[connection signal="body_entered" from="TrasitNext" to="." method="_on_body_entered"]
